<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="all_guests">Todos</string>
    <string name="presents">Presentes</string>
    <string name="absents">Ausentes</string>
    <string name="confirmation">Confirmação</string>
    <string name="save">Salvar</string>
    <string name="absent">Ausente</string>
    <string name="present">Presente</string>
    <string name="not_confirmation">Não confirmado</string>
    <string name="name">Nome</string>
</resources>